z-indexes fixed

--- a/stylus/elements/image-zoom.styl
+++ b/stylus/elements/image-zoom.styl
@@ -3,10 +3,10 @@
 .zoom-image-clone
 	position: fixed
 	transition: transform 0.2s linear
-	z-index: 20
+	z-index: 999
 	cursor: zoom-out
 #overlay
-	z-index: 19
+	z-index: 998
 	cursor: zoom-out
 	background-color: jet
 	background-color: rgba(jet,0.8)
